TAG: gxdhtload-6-0-6-3
DATE: 09/13/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1)US22 and US70 (load implementation)

TAG: gxdhtload-6-0-6-2
TAG: gxdhtload-6-0-6-1
DATE: 08/26/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) US23 Load QC