@@ -1,3 +1,9 @@
+TAG: gxdhtload-6-0-6-4
+DATE: 09/29/2016
+STAFF: sc
+CHANGES: TR12370 Project GXD HT
+1) US30 - Process 4 years worth of data weekly/find new PubMed IDs
+
 TAG: gxdhtload-6-0-6-3
 DATE: 09/13/2016
 STAFF: sc
